tweak circuit info card layout

--- a/app/src/main/res/layout/fragment_app_detail.xml
+++ b/app/src/main/res/layout/fragment_app_detail.xml
@@ -195,10 +195,14 @@
                             android:layout_alignTop="@+id/tv_app_exit"
                             android:layout_alignBottom="@+id/tv_entry_node"
                             android:layout_marginStart="2dp"
-                            android:layout_marginTop="6dp"
+                            android:layout_marginTop="8dp"
                             android:layout_marginEnd="2dp"
-                            android:layout_marginBottom="6dp"
+                            android:layout_marginBottom="10dp"
                             android:importantForAccessibility="no"
+                            android:paddingStart="@dimen/activity_horizontal_margin"
+                            android:paddingLeft="@dimen/activity_horizontal_margin"
+                            android:paddingRight="11dp"
+                            android:paddingEnd="11dp"
                             android:paddingHorizontal="@dimen/default_padding"
                             android:scaleType="centerCrop"
                             android:src="@drawable/bg_hops" />
@@ -209,20 +213,12 @@
                             android:layout_height="wrap_content"
                             android:layout_toEndOf="@id/iv_hops"
                             android:layout_below="@id/tv_circuit_description"
-                            android:paddingHorizontal="@dimen/compact_padding"
-                            android:paddingVertical="2dp"
+                            android:paddingEnd="@dimen/compact_padding"
+                            android:paddingRight="@dimen/compact_padding"
+                            android:paddingVertical="6dp"
                             tools:text="@string/this_browser"
                             android:text="@{viewModel.circuitExitApp}"
                             />
-                       <!-- <ImageView
-                            android:id="@+id/iv_flag_exit_node"
-                            android:layout_width="wrap_content"
-                            android:layout_height="0dp"
-                            android:layout_alignTop="@id/tv_exit_node"
-                            android:layout_alignBottom="@+id/tv_exit_node"
-                            android:layout_toEndOf="@id/iv_hops"
-                            android:src="@drawable/ic_trending_down"
-                            android:layout_below="@id/tv_circuit_description"/> -->
                         <TextView
                             android:id="@+id/tv_exit_node"
                             android:textAppearance="@style/app_circuits_text"
@@ -230,20 +226,12 @@
                             android:layout_height="wrap_content"
                             android:layout_toEndOf="@id/iv_hops"
                             android:layout_below="@id/tv_app_exit"
-                            android:paddingHorizontal="@dimen/compact_padding"
-                            android:paddingVertical="2dp"
+                            android:paddingVertical="6dp"
+                            android:paddingEnd="@dimen/compact_padding"
+                            android:paddingRight="@dimen/compact_padding"
                             tools:text="Spain"
                             android:text="@{viewModel.circuitExitNode}"
                             />
-                        <!--<ImageView
-                            android:id="@+id/iv_flag_relay_node"
-                            android:layout_width="wrap_content"
-                            android:layout_height="0dp"
-                            android:layout_alignTop="@id/tv_relay_node"
-                            android:layout_alignBottom="@+id/tv_relay_node"
-                            android:layout_toEndOf="@id/iv_hops"
-                            android:src="@drawable/ic_trending_down"
-                            android:layout_below="@id/tv_circuit_description"/>-->
                         <TextView
                             android:id="@+id/tv_relay_node"
                             android:textAppearance="@style/app_circuits_text"
@@ -251,20 +239,12 @@
                             android:layout_height="wrap_content"
                             android:layout_toEndOf="@id/iv_hops"
                             android:layout_below="@id/tv_exit_node"
-                            android:paddingHorizontal="@dimen/compact_padding"
-                            android:paddingVertical="2dp"
+                            android:paddingEnd="@dimen/compact_padding"
+                            android:paddingRight="@dimen/compact_padding"
+                            android:paddingVertical="6dp"
                             tools:text="Germany"
                             android:text="@{viewModel.circuitRelayNode}"
                             />
-                        <!--<ImageView
-                            android:id="@+id/iv_flag_entry_node"
-                            android:layout_width="wrap_content"
-                            android:layout_height="0dp"
-                            android:layout_alignTop="@id/tv_entry_node"
-                            android:layout_alignBottom="@+id/tv_entry_node"
-                            android:layout_toEndOf="@id/iv_hops"
-                            android:src="@drawable/ic_trending_down"
-                            android:layout_below="@id/tv_circuit_description"/>-->
                         <TextView
                             android:id="@+id/tv_entry_node"
                             android:textAppearance="@style/app_circuits_text"
@@ -272,8 +252,9 @@
                             android:layout_height="wrap_content"
                             android:layout_toEndOf="@id/iv_hops"
                             android:layout_below="@id/tv_relay_node"
-                            android:paddingHorizontal="@dimen/compact_padding"
-                            android:paddingVertical="2dp"
+                            android:paddingEnd="@dimen/compact_padding"
+                            android:paddingRight="@dimen/compact_padding"
+                            android:paddingVertical="6dp"
                             tools:text="Poland"
                             android:text="@{viewModel.circuitEntryNode}"
                             />
