implement app detail screen for independent Tor-powered apps. Includes minor clean up of unused style definitions

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -68,6 +68,10 @@
             android:name="argIsBrowser"
             app:argType="boolean"
             android:defaultValue="false" />
+        <argument
+            android:name="argHasTorSupport"
+            app:argType="boolean"
+            android:defaultValue="false" />
     </fragment>
 
 </navigation>
