--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -210,6 +210,14 @@
         <item name="bottomSheetStyle">@style/rounded_bottom_sheet</item>
     </style>
 
+    <style name="info_tag" parent="TextAppearance.MaterialComponents.Body1">
+        <item name="android:fontFamily">@font/figtree_regular</item>
+        <item name="android:textFontWeight" tools:targetApi="p">600</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/textOnPrimary</item>
+        <item name="android:background">@drawable/bg_rounded_tag</item>
+    </style>
+
     <style name="title_in_stats" parent="TextAppearance.MaterialComponents.Subtitle1">
         <item name="android:textFontWeight" tools:targetApi="p">600</item>
         <item name="android:textSize">12sp</item>
