--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -206,7 +206,7 @@
         <item name="android:textFontWeight" tools:targetApi="p">600</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">14sp</item>
-        <item name="android:textColor">@color/blue_30</item>
+        <item name="android:textColor">@color/blue30</item>
         <item name="android:lineHeight" tools:targetApi="p">20dp</item>
     </style>
 
